<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">面試作業</string>
    <string name="title_stock_metrics">指標</string>
    <string name="title_stock_day">每日</string>
    <string name="title_stock_day_avg">日均</string>
    <string name="close">關閉</string>
    <string name="sort_by_stock_code_asc">依股票代號降序</string>
    <string name="sort_by_stock_code_desc">依股票代號升序</string>
    <string name="please_input_keyword">請輸入關鍵字</string>


    <string name="price_earnings">本益比</string>
    <string name="dividend_yield">殖利率</string>
    <string name="price_book">股價淨值比</string>

    <string name="opening_price">開盤價</string>
    <string name="closing_price">收盤價</string>
    <string name="highest_price">最高價</string>
    <string name="lowest_price">最低價</string>
    <string name="change">漲跌價差</string>
    <string name="monthly_average">月平均價</string>

    <string name="keyword_is">條件：%1$s</string>


    <string name="loading">讀取中</string>
    <string name="error_message_empty">%1$s 不得為空</string>
    <string name="error_message_format">%1$s 輸入錯誤</string>
    <string name="error_message_phone_num_format">手機格式錯誤</string>
    <string name="error_message_no_data">查無資料</string>
    <string name="error_message_no_more_data">查無更多資料</string>
    <string name="error_message_data_empty">%1$s 資料為空</string>
    <string name="error_message_TODO">沒道理錯誤</string>
    <string name="error_message_Json_format">Json 解析錯誤</string>
    <string name="error_message_url_decode">url 解析錯誤</string>
    <string name="error_message_no_network">無網路</string>
    <string name="error_message_unknown">未知的錯誤</string>
</resources>