<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_stock_day">


    <fragment
        android:id="@+id/navigation_metrics"
        android:name="com.smallfat5566.kevinhomework20250325.ui.fragment.StockMetricsFragment"
        android:label="@string/title_stock_metrics"
        tools:layout="@layout/fragment_stock_metrics" />

    <fragment
        android:id="@+id/navigation_stock_day_avg"
        android:name="com.smallfat5566.kevinhomework20250325.ui.fragment.StockDayAvgFragment"
        android:label="@string/title_stock_day_avg"
        tools:layout="@layout/fragment_stock_day_avg" />

    <fragment
        android:id="@+id/navigation_stock_day"
        android:name="com.smallfat5566.kevinhomework20250325.ui.fragment.StockDayFragment"
        android:label="@string/title_stock_day"
        tools:layout="@layout/fragment_stock_day" />

</navigation>