<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:minHeight="240dp"
    style="@style/List_Layout">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/codeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_smaller"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/codeTextView"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/lineView_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_margin_smallest"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        android:background="@color/primary_color" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lineView_1"
        app:layout_constraintBottom_toBottomOf="parent">
        <GridLayout
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lineView_2"
            android:rowCount="3"
            android:columnCount="2" >
            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/openingPriceTitleValueView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="50"
                android:layout_rowWeight="33"
                app:nameText="@string/opening_price"/>
            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/closingPriceTitleValueView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="50"
                android:layout_rowWeight="33"
                app:nameText="@string/closing_price"/>

            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/highestPriceTitleValueView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="50"
                android:layout_rowWeight="33"
                app:nameText="@string/highest_price"/>
            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/lowestPriceTitleValueView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="50"
                android:layout_rowWeight="33"
                app:nameText="@string/lowest_price"/>

            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/changeTitleValueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="50"
                app:nameText="@string/change"/>
            <com.smallfat5566.kevinhomework20250325.ui.view.PriceDataView
                android:id="@+id/monthlyAveragePriceTitleValueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="50"
                app:nameText="@string/monthly_average"/>

        </GridLayout>
        <View
            android:id="@+id/lineView_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_margin_smallest"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            android:background="@color/primary_color" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.smallfat5566.kevinhomework20250325.ui.view.TransactionDataView
                android:id="@+id/transactionTitleValueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tradeVolumeTitleValueView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.33"
                app:nameText="成交筆數"/>

            <com.smallfat5566.kevinhomework20250325.ui.view.TransactionDataView
                android:id="@+id/tradeVolumeTitleValueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/transactionTitleValueView"
                app:layout_constraintEnd_toStartOf="@id/tradeValueTitleValueView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.33"
                app:nameText="成交股數"/>

            <com.smallfat5566.kevinhomework20250325.ui.view.TransactionDataView
                android:id="@+id/tradeValueTitleValueView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tradeVolumeTitleValueView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.33"
                app:nameText="成交金額"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>